[package]
name = "phaeton"
version = "0.1.0"
authors = ["Morgan Herlocker"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/morganherlocker/phaeton"
license = "MIT"

[dependencies]
osmpbf = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"

[lib]
name = "phaeton"
path = "src/lib.rs"

[[bin]]
name = "phaeton"
path = "src/bin.rs"
